--- a/_posts/press/2008-03-23-fastcompany.html
+++ b/_posts/press/2008-03-23-fastcompany.html
@@ -1,14 +1,14 @@
 ---
 layout: press
-title: Quoted in Fast Company
+title: How an Army of Techies is Taking on City Hall
 categories:
 - Press
 tags:
 - magazine
-status: publish
-type: post
-published: true
+image:
+  thumb: fastco.png
+link: http://www.fastcompany.com/1702210/how-army-techies-taking-city-hall
+byline: Anya Kamenetz
+pubdate: Nov 29, 2010
 ---
-
-<blockquote>[Code for America's] core idea is that a small group of talented, passionate, and, yes, risky individuals can change the world.</blockquote>
-<figcaption>Caption describing these two images.</figcaption>
+<blockquote>"Abhi Nemani, a 2010 graduate of Claremont McKenna College in Claremont, California, deferred a job offer from Google to serve as CFA's director of strategy and communications. 'Choosing Code for America is a risk,' says Nemani, 'but an attractive one because of its optimism and originality. Its core idea is that a small group of talented, passionate, and, yes, risky individuals can change the world.'"</blockquote>
