fixed ieee post

--- a/_posts/press/2013-11-19-ieee.html
+++ b/_posts/press/2013-11-19-ieee.html
@@ -1,15 +1,15 @@
 ---
 layout: press
-title: Four Years In, Code for America's Experiments In Disrupting Govt Still Just The Beginning
+title: Grokking Democracy: A Political World Transformed by Digital Technology
 categories:
 - Press
 tags:
-- online
+- podcast
 image:
-  thumb: tp.png
+  thumb: ieee.png
 link: http://spectrum.ieee.org/static/grokking-democracy-a-political-world-transformed-by-digital-technology
-byline: Sarah Lai Stirland
-publication: TechPresident
-pubdate: October 14, 2013
+byline: Jonathan Alter and Lisa Mullins
+publication: Mashable
+pubdate: November 19, 2013
 ---
-<blockquote>"It’s this willingness to experiment on a small scale and evaluate the results that’s crucial to changing the current model of governing, Nemani says. 'One thing about our model is that, unlike traditional vendors who have a very specific app that they’re going to build, our model focuses on emergent outcomes,' Nemani says. 'We push for the cities to be comfortable with, frankly, some ambiguity in the process — but sometimes some of the most interesting things come out of that.'"</blockquote>
+<blockquote>"The government we have doesn’t always look and feel like us. I can pull up my smartphone and find out how my bank account’s doing. I can find out how my favorite sports team’s doing. I can do that on my phone, and that’s how I’m used to interacting with things—right?—with my institutions. But I don’t interact with my government that way, which means I don’t feel as connected to my government, like that it’s of me, by me, for me. And that’s the change that happens when you build simple little apps."</blockquote>
