--- a/_posts/press/2013-10-14-tp.html
+++ b/_posts/press/2013-10-14-tp.html
@@ -7,7 +7,7 @@ tags:
 - online
 image:
   thumb: tp.png
-link: http://spectrum.ieee.org/static/grokking-democracy-a-political-world-transformed-by-digital-technology
+link: http://techpresident.com/news/24425/four-years-code-americas-experiments-disrupting-government-still-just-beginning
 byline: Sarah Lai Stirland
 pubdate: Oct 14, 2013
 ---
