--- a/_posts/press/2013-11-19-ieee.html
+++ b/_posts/press/2013-11-19-ieee.html
@@ -1,6 +1,6 @@
 ---
 layout: press
-title: Grokking Democracy: A Political World Transformed by Digital Technology
+title: Grokking Democracy - A Political World Transformed by Digital Technology
 categories:
 - Press
 tags:
@@ -12,4 +12,4 @@ byline: Jonathan Alter
 pubdate: Nov 19, 2013
 date: 2013-11-19
 ---
-<blockquote>"The government we have doesn’t always look and feel like us. I can pull up my smartphone and find out how my bank account’s doing. I can find out how my favorite sports team’s doing. I can do that on my phone, and that’s how I’m used to interacting with things with my institutions. But I don’t interact with my government that way, which means I don’t feel as connected to my government, like that it’s of me, by me, for me. And that’s the change that happens when you build simple little apps."</blockquote>
+<blockquote>"The government we have doesn't always look and feel like us. I can pull up my smartphone and find out how my bank account's doing. I can find out how my favorite sports team's doing. I can do that on my phone, and that's how I’m used to interacting with things with my institutions. But I don't interact with my government that way, which means I don't feel as connected to my government, like that it’s of me, by me, for me. And that’s the change that happens when you build simple little apps."</blockquote>
