updated press pages

--- a/_posts/publications/2012-02-01-governing.html
+++ b/_posts/publications/2012-02-01-governing.html
@@ -2,7 +2,7 @@
 layout: publications
 title: 7 Principles for 21st Century Cities
 categories:
-- Press
+- Publications
 tags:
 - magazine
 - civic startups
