--- a/_posts/press/2010-03-23-fastcompany.html
+++ b/_posts/press/2010-03-23-fastcompany.html
@@ -10,6 +10,7 @@ image:
 link: http://www.fastcompany.com/1702210/how-army-techies-taking-city-hall
 byline: Anya Kamenetz
 pubdate: Nov 29, 2010
+publication: Fast Company
 date: 2010-11-29
 ---
 <blockquote>"Abhi Nemani, a 2010 graduate of Claremont McKenna College in Claremont, California, deferred a job offer from Google to serve as CFA's director of strategy and communications. 'Choosing Code for America is a risk,' says Nemani, 'but an attractive one because of its optimism and originality. Its core idea is that a small group of talented, passionate, and, yes, risky individuals can change the world.'"</blockquote>
