--- a/_posts/press/2013-08-28-sdtimes.html
+++ b/_posts/press/2013-08-28-sdtimes.html
@@ -1,6 +1,6 @@
 ---
 layout: press
-title: Agile2013 Keynote: The user experience in government software matters
+title: Agile2013 Keynote - The user experience in government software matters
 categories:
 - Press
 tags:
