added new press

--- a/_posts/press/2010-03-23-fastcompany.html
+++ b/_posts/press/2010-03-23-fastcompany.html
@@ -5,6 +5,7 @@ categories:
 - Press
 tags:
 - magazine
+- featured
 image:
   thumb: fastco.png
 link: http://www.fastcompany.com/1702210/how-army-techies-taking-city-hall
