--- a/_posts/press/2012-06-13-big-startup-wave.html
+++ b/_posts/press/2012-06-13-big-startup-wave.html
@@ -5,6 +5,7 @@ categories:
 - Press
 tags:
 - online
+- featured
 image:
   thumb: atlantic.png
 link:  http://www.theatlanticcities.com/technology/2012/06/next-big-start-wave-civic-technology/2265/
