--- a/_posts/press/2013-11-06-pd.html
+++ b/_posts/press/2013-11-06-pd.html
@@ -5,6 +5,7 @@ categories:
 - Press
 tags:
 - online
+- featured
 image:
   thumb: pd.png
 link: http://pandodaily.com/2013/11/06/the-government-needs-to-reform-its-relationship-with-technology/
