changed featured press

--- a/_posts/press/2014-02-23-latech.html
+++ b/_posts/press/2014-02-23-latech.html
@@ -4,7 +4,7 @@ title: LAs Chief Data Officer Empowers Angelenos to Grow the City
 categories:
 - Press
 tags:
-- procurement
+- featured
 image:
   thumb: latech.png
 link: http://latechdigest.com/las-chief-data-officer-empowers-angelenos-to-grow-the-city/
