--- a/_posts/press/2015-05-06-techrepublic.html
+++ b/_posts/press/2015-05-06-techrepublic.html
@@ -1,6 +1,6 @@
 ---
 layout: press
-title: Chief data officer: Insight into a crucial role for the exabyte age
+title: Chief data officer - Insight into a crucial role for the exabyte age
 categories:
 - Press
 tags:
