chaged featured press

--- a/_posts/press/2015-12-31-huffpo.html
+++ b/_posts/press/2015-12-31-huffpo.html
@@ -5,12 +5,13 @@ categories:
 - Press
 tags:
 - data
+- featured
 image:
   thumb: huffpo.png
 link: http://www.huffingtonpost.com/entry/this-is-how-visualizing-open-data-can-help-save-lives_56781c17e4b014efe0d5fd59
 byline: Alex Howard
 pubdate: December 31, 2015
-publication: Huffingpost Post
+publication: Huffington Post
 date: 2015-12-31
 ---
 <blockquote>Cities are increasingly releasing data that they can use to make life better for their residents online -- enabling journalists and researchers to better inform the public. <br /><br />
