--- a/_posts/press/2015-12-31-huffpo.html
+++ b/_posts/press/2015-12-31-huffpo.html
@@ -15,7 +15,7 @@ publication: Huffington Post
 date: 2015-12-31
 ---
 <blockquote>Cities are increasingly releasing data that they can use to make life better for their residents online -- enabling journalists and researchers to better inform the public. <br /><br />
-Los Angeles, for example, has analyzed data about injuries and deaths on its streets and published it online. Now people can check its conclusions and understand why LA's public department prioritizes certain intersections.<br /><br />
+Los Angeles, for example, has analyzed data about injuries and deaths on its streets and published it online. Now people can check its conclusions and understand why LA's public department prioritizes certain intersections...<br /><br />
 <strong>Abhi Nemani</strong>, the former chief data officer for LA, explained why the city needed to "go back to school" for help.<br /><br /> 
 "In resource-constrained environments -- the environment most cities find themselves in these days -- you often have to beg, borrow, and steal innovation; particularly so, when it comes to in-demand resources such as data science expertise," he told the Huffington Post.<br /><br />  
 "That's why in Los Angeles, we opted to lean on the community for support: both the growing local tech sector and the expansive academic base. The academic community, in particular, was eager to collaborate with the city. In fact, most -- if not all -- local institutions reached out to me at some point asking to partner on a data science project with their graduate students."</blockquote>
