--- a/_posts/press/2014-08-21-bizjournal.html
+++ b/_posts/press/2014-08-21-bizjournal.html
@@ -1,17 +1,21 @@
 ---
 layout: press
-title: L.A. appoints first chief data officer
+title: Can Sacramento become an entrepreneurship capital?
 categories:
 - Press
 tags:
-- data
+- entrepreneurship
 image:
-  thumb: bizjournal.png
-link: http://www.bizjournals.com/losangeles/news/2014/08/21/l-a-appoints-first-chief-data-officer.html
-byline: AnnLee Ellingson
-pubdate: August 21, 2014
-publication: LA Business Journal
-date: 2014-08-21
+  thumb: comstock.jpg
+link: https://www.comstocksmag.com/web-only/can-sacramento-become-capital-entrepreneurship
+byline: Vanessa Richardson
+pubdate: January 11, 2017
+publication: Comstock Magazine
+date: 2017-01-11
 ---
-<blockquote>In another move “to promote transparency and accountability” through big data, Los Angeles Mayor Eric Garcetti has hired the city’s first chief data officer. Abhi Nemani will collaborate with city departments to collect and analyze data and oversee operations of L.A.’s new open-data portal. Nemani will also “create tools to use data that will help solve everyday challenges for our residents,” Garcetti said in a statement.
+<blockquote>To build up MOFIE, Johnson tapped Abhi Nemani, a 27-year-old tech wunderkind who helped launch Code for America and served as the City of Los Angeles’ first chief data officer. Nemani, who works on a consulting basis (he lives full-time in St. Louis), started by meeting with Sacramento leaders in tech and higher education, and heard three key themes right away.<br><br>
+
+“Folks don’t look at Sacramento as an innovation city like San Francisco or Austin, and while there is a lot of innovative stuff going on here, not a lot of people know about it,” Nemani says. Another problem: While Sacramento’s universities produce great talent, graduates aren’t staying. They  head to the Bay Area instead because they think that’s where their idea will get off the ground.<br><br>
+
+To prevent that from happening,the Innovation and Growth Fund focuses on three goals: building a talent pipeline, drawing venture capital and investors to the area, and creating a better-connected tech community. RAILS grants are given to groups that help startups in those areas. “To create a pipeline, it’s about leadership: training and empowering people with tools to be successful,” Nemani says. “Second is innovation: getting people connected, in places like coworking spaces and maker labs. Third is acceleration: creating incubator and accelerator programs to help entrepreneurs with ideas take them to scale.” RAILS grant applicants also had to show that they have a commitment to diversity and inclusion within employee ranks, and a track record for delivering results quickly and on budget.
 </blockquote>
