--- a/_posts/press/2012-10-17-mashable.html
+++ b/_posts/press/2012-10-17-mashable.html
@@ -5,6 +5,7 @@ categories:
 - Press
 tags:
 - online
+- featured
 image:
   thumb: mashable.png
 link: http://mashable.com/2012/10/17/code-for-america-tech-government/
