--- a/_posts/press/2016-06-13-bizjournal.html
+++ b/_posts/press/2016-06-13-bizjournal.html
@@ -7,7 +7,7 @@ tags:
 - startups
 - featured
 image:
-  thumb: sacbi.jpg
+  thumb: sacbiz.jpg
 link: http://www.bizjournals.com/sacramento/news/2016/06/10/how-city-council-would-spend-8-2-million-fund.html
 byline: Allen Young
 pubdate: June 10, 2016
