--- a/_posts/press/2017-01-17-comstock.html
+++ b/_posts/press/2017-01-17-comstock.html
@@ -1,6 +1,6 @@
 ---
 layout: press
-title: Can Sacramento become an entrepreneurship capital?
+title: Can Sacramento become an entrepreneurship capital
 categories:
 - Press
 tags:
