fixed press clippings

--- a/_posts/press/2017-01-17-comstock.html
+++ b/_posts/press/2017-01-17-comstock.html
@@ -5,6 +5,7 @@ categories:
 - Press
 tags:
 - entrepreneurship
+- featured
 image:
   thumb: comstock.jpg
 link: https://www.comstocksmag.com/web-only/can-sacramento-become-capital-entrepreneurship
