changed press clips

--- a/_posts/press/2013-10-08-govtech.html
+++ b/_posts/press/2013-10-08-govtech.html
@@ -4,6 +4,7 @@ title: Code for America Works to Build Innovation Ecosystem
 categories:
 - Press
 tags:
+- featured
 - online
 - civic startups
 image:
