--- a/about/index.html
+++ b/about/index.html
@@ -1,3 +1,4 @@
 <html>
-<meta http-equiv="refresh" content="time; URL=https://abhinemani.com/bio" />
+<head>
+<meta http-equiv="refresh" content="0; URL=https://abhinemani.com/bio" /></head>
 </html>
